changed the font... maybe

--- a/ios/cookies/Supporting/Info.plist
+++ b/ios/cookies/Supporting/Info.plist
@@ -93,7 +93,7 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>lobster.ttf</string>
+		<string>KBGobbleDay.ttf</string>
 	</array>
 </dict>
 </plist>
